[package]
name = "setns-common"
version = "1.0.0"
authors = ["jeff.dileo@nccgroup.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
commands = "0.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
